set(LOCATION_COMPILE_DEFINITIONS ${COMPILE_DEFINITIONS})

if(WIN32)
	# TODO: 这里需要查找当前项目需要依赖的库，添加到 LINK_LIBRARIES
	set(PAHOMQTT_PATH_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../3rdpart_prebuilt/mqtt")
	set(FFMPEG_PATH_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/../3rdpart_prebuilt/ffmpeg_lib_official)
   	set(OPENCV_PATH_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/../3rdpart_prebuilt/opencv_lib_official)
	set(METADATAPROCESSING_PATH_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/../3rdpart_prebuilt/JoMetaDataProcessingLib)
	set(WEBRTC_PATH_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/../3rdpart_prebuilt/JoWebRtcLib)
	set(ARENGINE_PATH_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/../3rdpart_prebuilt/JoAREngineLib)
	set(AIENGINE_PATH_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/../3rdpart_prebuilt/JoAIEngineLib)
	set(EIGEN_PATH_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/../3rdpart_prebuilt/eigen)
endif(WIN32)

find_package(PAHOMQTT REQUIRED)
if(PAHOMQTT_FOUND)
	include_directories(SYSTEM ${PAHOMQTT_INCLUDE_DIRS})
	update_cached_list(LINK_LIBRARIES ${PAHOMQTT_LIBRARIES})
	message(STATUS "found library: ${PAHOMQTT_LIBRARIES}")
else()
	message(FATAL_ERROR "fatal: not found paho-mqtt")
endif(PAHOMQTT_FOUND)

# ffmpeg -- 多个模块依赖的库，统一查找
find_package(PkgConfig QUIET)

# 查找 ffmpeg/libavformat 是否安装
if(PKG_CONFIG_FOUND)
	pkg_check_modules(AVFORMAT QUIET IMPORTED_TARGET libavformat)
	if(AVFORMAT_FOUND)
	  update_cached_list(LINK_LIBRARIES PkgConfig::AVFORMAT)
	  message(STATUS "found library: ${AVFORMAT_LIBRARIES}")
	endif()
endif()

# 查找 ffmpeg/libavutil 是否安装
if(PKG_CONFIG_FOUND)
	pkg_check_modules(AVUTIL QUIET IMPORTED_TARGET libavutil)
	if(AVUTIL_FOUND)
	  update_cached_list(LINK_LIBRARIES PkgConfig::AVUTIL)
	  message(STATUS "found library: ${AVUTIL_LIBRARIES}")
	endif()
endif()

# 查找 ffmpeg/libavcodec 是否安装
if(PKG_CONFIG_FOUND)
	pkg_check_modules(AVCODEC QUIET IMPORTED_TARGET libavcodec)
	if(AVCODEC_FOUND)
		update_cached_list(LINK_LIBRARIES PkgConfig::AVCODEC)
		message(STATUS "found library: ${AVCODEC_LIBRARIES}")
	endif()
endif()

# 查找 ffmpeg/libswscale 是否安装
if(PKG_CONFIG_FOUND)
	pkg_check_modules(SWSCALE QUIET IMPORTED_TARGET libswscale)
	if(SWSCALE_FOUND)
		update_cached_list(LINK_LIBRARIES PkgConfig::SWSCALE)
		message(STATUS "found library: ${SWSCALE_LIBRARIES}")
	endif()
endif()

# 查找 ffmpeg/libswresample 是否安装
if(PKG_CONFIG_FOUND)
	pkg_check_modules(SWRESAMPLE QUIET IMPORTED_TARGET libswresample)
	if(SWRESAMPLE_FOUND)
		update_cached_list(LINK_LIBRARIES PkgConfig::SWRESAMPLE)
		message(STATUS "found library: ${SWRESAMPLE_LIBRARIES}")
	endif()
endif()

# 查找 ffmpeg/libavformat 是否安装
if(NOT AVFORMAT_FOUND)
	find_package(AVFORMAT REQUIRED)
	if(AVFORMAT_FOUND)
		include_directories(SYSTEM ${AVFORMAT_INCLUDE_DIR})
		update_cached_list(LINK_LIBRARIES ${AVFORMAT_LIBRARIES})
		message(STATUS "found library: ${AVFORMAT_LIBRARIES}")
	endif ()
endif ()

# 查找 ffmpeg/libavutil 是否安装
if(NOT AVUTIL_FOUND)
	find_package(AVUTIL REQUIRED)
	if(AVUTIL_FOUND)
		include_directories(SYSTEM ${AVUTIL_INCLUDE_DIR})
		update_cached_list(LINK_LIBRARIES ${AVUTIL_LIBRARIES})
		message(STATUS "found avutil library: ${AVUTIL_LIBRARIES}")
	endif ()
endif ()

# 查找 ffmpeg/libavcodec 是否安装
if(NOT AVCODEC_FOUND)
	find_package(AVCODEC REQUIRED)
	if(AVCODEC_FOUND)
		include_directories(SYSTEM ${AVCODEC_INCLUDE_DIR})
		update_cached_list(LINK_LIBRARIES ${AVCODEC_LIBRARIES})
		message(STATUS "found library: ${AVCODEC_LIBRARIES}")
	endif()
endif()

# 查找 ffmpeg/libswscale 是否安装
if(NOT SWSCALE_FOUND)
	find_package(SWSCALE REQUIRED)
	if(SWSCALE_FOUND)
		include_directories(SYSTEM ${SWSCALE_INCLUDE_DIR})
		update_cached_list(LINK_LIBRARIES ${SWSCALE_LIBRARIES})
		message(STATUS "found library: ${SWSCALE_LIBRARIES}")
	endif()
endif()

# 查找 ffmpeg/libswresample 是否安装
if(NOT SWRESAMPLE_FOUND)
	find_package(SWRESAMPLE REQUIRED)
	if(SWRESAMPLE_FOUND)
		include_directories(SYSTEM ${SWRESAMPLE_INCLUDE_DIRS})
		update_cached_list(LINK_LIBRARIES ${SWRESAMPLE_LIBRARIES})
		message(STATUS "found library: ${SWRESAMPLE_LIBRARIES}")
	endif()
endif()

if(AVUTIL_FOUND AND AVCODEC_FOUND AND SWSCALE_FOUND AND SWRESAMPLE_FOUND)
	update_cached_list(LINK_LIBRARIES ${CMAKE_DL_LIBS})
else()
	message(WARNING "ffmpeg 相关功能未找到")
endif()


# 查找JoAIEngineSDK
if(ENABLE_AI)
  find_package(AIEngine QUIET)
  if(AIENGINE_FOUND)
    if(WIN32)
      message(STATUS "found library: $<IF:$<CONFIG:Debug>,${AIENGINE_LIBRARIES_DEBUG},${AIENGINE_LIBRARIES_RELEASE}")
    else()
      message(STATUS "found library: ${AIENGINE_LIBRARIES}")
    endif()
  
	message(STATUS "AIENGINE_INCLUDE_DIRS: ${AIENGINE_INCLUDE_DIRS}")
    include_directories(SYSTEM ${AIENGINE_INCLUDE_DIRS})

    if(WIN32)
	    # update_cached_list(LINK_LIBRARIES_DEBUG ${AIENGINE_LIBRARIES_DEBUG})
	    # update_cached_list(LINK_LIBRARIES_RELEASE ${AIENGINE_LIBRARIES_RELEASE})
		update_cached_list(LINK_LIBRARIES ${AIENGINE_LIBRARIES_RELEASE})
    else()
	    update_cached_list(LINK_LIBRARIES ${AIENGINE_LIBRARIES})
    endif(WIN32)
  else()
    set(ENABLE_AI OFF)
    message(WARNING "warning: not found AIEngine")
  endif()
endif()

find_package(MetaDataProcessing REQUIRED)
if(METADATAPROCESSING_FOUND)
  message(STATUS "found library: ${METADATAPROCESSING_LIBRARIES}")
  include_directories(SYSTEM ${METADATAPROCESSING_INCLUDE_DIRS})
  update_cached_list(LINK_LIBRARIES ${METADATAPROCESSING_LIBRARIES})
else()
  message(FATAL_ERROR "fatal: not found MetaDataProcessing")
endif()
if(ENABLE_VISION_ENHANCE)
#查找JoVisionEnhanceSDK
	find_package(VisionEnhance REQUIRED)
if(VISIONENHANCE_FOUND)
	message(STATUS "found library: ${VISIONENHANCE_LIBRARIES}")
	include_directories(SYSTEM ${VISIONENHANCE_INCLUDE_DIRS})
	update_cached_list(LINK_LIBRARIES ${VISIONENHANCE_LIBRARIES})
else()
	set(ENABLE_VISION_ENHANCE OFF)
	message(FATAL_ERROR "fatal: not found VisionEnhance")
endif()
endif()
# 查找JoAREngineSDK
if(ENABLE_AR)
  find_package(AREngine QUIET)
  if(ARENGINE_FOUND)
    if(WIN32)
      message(STATUS "found library: $<IF:$<CONFIG:Debug>,${ARENGINE_LIBRARIES_DEBUG},${ARENGINE_LIBRARIES_RELEASE}")
    else()
      message(STATUS "found library: ${ARENGINE_LIBRARIES}")
    endif()
  
    include_directories(SYSTEM ${ARENGINE_INCLUDE_DIRS})

    if(WIN32)
	    #update_cached_list(LINK_LIBRARIES_DEBUG ${ARENGINE_LIBRARIES_DEBUG})
	    #update_cached_list(LINK_LIBRARIES_RELEASE ${ARENGINE_LIBRARIES_RELEASE})
		update_cached_list(LINK_LIBRARIES ${ARENGINE_LIBRARIES_DEBUG})
    else()
	    update_cached_list(LINK_LIBRARIES ${ARENGINE_LIBRARIES})
    endif(WIN32)
  else()
    set(ENABLE_AR OFF)
    message(WARNING "warning: not found AREngine")
  endif()
endif()

if(ENABLE_GPU)
find_package(CUDA REQUIRED)
# if(WIN32)
# 	# 指定 CUDA 编译器路径
# 	set(CMAKE_CUDA_COMPILER "C:/Program Files/NVIDIA GPU Computing Toolkit/CUDA/v10.2/bin/nvcc.exe" CACHE PATH "The CUDA compiler")
# 	set(CUDA_TOOLKIT_ROOT_DIR "C:/Program Files/NVIDIA GPU Computing Toolkit/CUDA/v10.2" CACHE PATH "CUDA toolkit root directory")
# 	# 确保 CMake 使用 CUDA 10.2 的库和头文件
# 	set(CMAKE_CUDA_STANDARD 14)  # 设置 CUDA 标准（例如 C++14）
# 	set(CMAKE_CUDA_ARCHITECTURES "60;70;75" CACHE STRING "CUDA architectures to build for")  # 设置目标架构

# 	# 禁用 Visual Studio 的 CUDA 自定义目标文件
# 	set(CMAKE_CUDA_EXTENSIONS OFF)
# 	# enable_language(CUDA)
# endif()
if(ENABLE_AIRBORNE)
set(CMAKE_CUDA_COMPILER /usr/local/cuda/bin/nvcc)
enable_language(CUDA)
set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS} --use_fast_math -gencode arch=compute_72,code=sm_72)
set(CMAKE_CUDA_ARCHITECTURES 72)
endif()

if(CUDA_FOUND)
	message(STATUS "found cuda library: ${CUDA_LIBRARIES}")
	message(STATUS "found cuda library: ${CUDA_npp_LIBRARY}")
	include_directories(${CUDA_INCLUDE_DIRS})
	update_cached_list(LINK_LIBRARIES ${CUDA_LIBRARIES})
	update_cached_list(LINK_LIBRARIES ${CUDA_npp_LIBRARY})
else()
	message(ERROR "cuda not found")
endif()
endif()
if (ENABLE_OPENSET_DETECTION)
set(Torch_DIR "/usr/local/libtorch/share/cmake/Torch")
find_package(Torch REQUIRED)
if(TORCH_FOUND)
  message(STATUS "found library: ${TORCH_LIBRARIES}")
  include_directories(SYSTEM ${TORCH_INCLUDE_DIRS})
  update_cached_list(LINK_LIBRARIES ${TORCH_LIBRARIES})
else()
  message(FATAL_ERROR "fatal: not found Torch")
endif()
set(TORCHVISION_INCLUDE_DIR "/usr/local/include/torchvision")
set(TORCHVISION_LIBRARY "/usr/local/lib/libtorchvision.so")
endif()
if(WIN32)
	if(ENABLE_GPU)
		set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/../3rdpart_prebuilt/opencv_lib_self")
		set(OpenCV_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../3rdpart_prebuilt/opencv_lib_self)
		include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../3rdpart_prebuilt/opencv_lib_self/include)
	else()
		set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/../3rdpart_prebuilt/opencv_lib_official")
		set(OpenCV_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../3rdpart_prebuilt/opencv_lib_official)
	endif()
else()
	set(OpenCV_DIR /usr/local/lib/cmake/opencv4/)
endif() 

if(ENABLE_GPU)
  find_package(OpenCV REQUIRED)
  if(OPENCV_FOUND)
    include_directories(${OpenCV_INCLUDE_DIRS})
    update_cached_list(LINK_LIBRARIES ${OpenCV_LIBS})
    message(STATUS "found opencv library: ${OpenCV_LIBS}")
  else()
    message(ERROR "opencv 未找到")
  endif()
else()
  if(WIN32)
    find_package(OpenCVWorld REQUIRED)
    if(OPENCVWORLD_FOUND)
      include_directories(${OpenCV_INCLUDE_DIRS})
	#   if(CMAKE_BUILD_TYPE STREQUAL "Debug")
   	# 	message(STATUS "Building in Debug mode")
	# 	update_cached_list(LINK_LIBRARIES ${OPENCV_CORE_LIBRARY_DEBUG})
	# 	message(STATUS "found library: ${OPENCV_CORE_LIBRARY_DEBUG}")
	#   else()
	  	message(STATUS "Building in Release mode")
		update_cached_list(LINK_LIBRARIES_DEBUG ${OPENCV_CORE_LIBRARIES_DEBUG})
		update_cached_list(LINK_LIBRARIES_RELEASE ${OPENCV_CORE_LIBRARIES_RELEASE})
		message(STATUS "found library: ${OPENCV_CORE_LIBRARIES_RELEASE} AND ${OPENCV_CORE_LIBRARIES_DEBUG}")
	#   endif()
    else()
      message(ERROR " OPENCVWORLD 未找到")
    endif()
  else()
    find_package(OpenCV REQUIRED)
    if(OPENCV_FOUND)
      include_directories(${})
      update_cached_list(LINK_LIBRARIES ${OpenCV_LIBS})
      message(STATUS "found opencv library: ${OpenCV_LIBS}")
    else()
      message(ERROR "opencv 未找到")
    endif()
  endif()
endif(ENABLE_GPU)

# find eigen
if(WIN32)
  set(EIGEN3_INCLUDE_DIR ${EIGEN_PATH_ROOT})
  include_directories(${EIGEN3_INCLUDE_DIR})
else()
  find_package(Eigen3 REQUIRED)
  if(NOT EIGEN3_INCLUDE_DIR)
    message(error "eigen library not found")
  endif()
endif()

# 查找 jo_webrtc 是否安装
find_package(WebRtc REQUIRED)
if(WEBRTC_FOUND)
  message(STATUS "found WebRtc library: ${WEBRTC_LIBRARIES}")
  include_directories(SYSTEM ${WEBRTC_INCLUDE_DIRS})
  update_cached_list(LINK_LIBRARIES ${WEBRTC_LIBRARIES})
else()
  message(FATAL_ERROR "fatal: not found WebRtc")
endif()

# 独立的公用模块，不依赖其它模块,并且可能会被其它模块依赖
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/plugin)
add_subdirectory(plugin)
if(ENABLE_PIO)
	add_subdirectory(pio)
endif()
# 会依赖 common 和 media-tool
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/media-tool)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/assembly/json)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/meta-data)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/media-engine)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/task-center)
if(ENABLE_THIS_SERVICE)
	add_subdirectory(media-tool)
	add_subdirectory(assembly)
	add_subdirectory(meta-data)
endif()

if(NOT ENABLE_AIRBORNE)
	if(ENABLE_GPU)
		include_directories(${CMAKE_CURRENT_SOURCE_DIR}/image-process)
		add_subdirectory(image-process)
		add_subdirectory(image-enhancer)
	endif()
endif()

if(ENABLE_THIS_SERVICE)
	add_subdirectory(media-engine)
	add_subdirectory(task-center)
	add_subdirectory(server)
	#add_subdirectory(daemon-server)
endif()

if(ENABLE_TESTS)
	add_subdirectory(test)
endif(ENABLE_TESTS)