file(GLOB MAIN_SERVICE_SRC_LIST ./*.cpp ./*.h)

set(LOCATION_COMPILE_DEFINITIONS ${COMPILE_DEFINITIONS})

if(ENABLE_AIRBORNE)
    message(STATUS "ENABLE AIRBORNE")
    list(APPEND LOCATION_COMPILE_DEFINITIONS ENABLE_AIRBORNE)
else()
    message(STATUS "NOT ENABLE AIRBORNE")
endif(ENABLE_AIRBORNE)

message(STATUS "sub server LINK_LIBRARIES ======== ${LINK_LIBRARIES}")
set(LOCATION_LINK_LIBRARIES ${LINK_LIBRARIES})

if(ENABLE_APPLICATION)
    list(APPEND LOCATION_LINK_LIBRARIES HA::SmaPluginLib)
endif()

set(SERVICE_NAME JoEAPSma)
#set(SERVICE_NAME JoEAPSmaSub)

add_executable(${SERVICE_NAME} ${MAIN_SERVICE_SRC_LIST})

target_compile_definitions(${SERVICE_NAME}
  PRIVATE ${LOCATION_COMPILE_DEFINITIONS})
target_compile_options(${SERVICE_NAME}
  PRIVATE ${COMPILE_OPTIONS_DEFAULT})

if(CMAKE_SYSTEM_NAME MATCHES "Linux")
  target_link_libraries(${SERVICE_NAME} -Wl,--start-group ${LOCATION_LINK_LIBRARIES} -Wl,--end-group)
else()
  target_link_libraries(${SERVICE_NAME} PRIVATE ${LOCATION_LINK_LIBRARIES})
endif()

install(TARGETS ${SERVICE_NAME} DESTINATION ${INSTALL_PATH_RUNTIME})