file(GLOB EAPS_SRC_LIST
  ${CMAKE_CURRENT_SOURCE_DIR}/*.c
  ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

# 添加库
add_library(eap-sma-core STATIC ${EAPS_SRC_LIST})
add_library(EAPS::CoreLib ALIAS eap-sma-core)

set(LOCATION_LINK_LIBRARIES ${LINK_LIBRARIES})
list(REMOVE_ITEM LOCATION_LINK_LIBRARIES EAPS::CoreLib)
set(LOCATION_COMPILE_DEFINITIONS ${COMPILE_DEFINITIONS})

if(ENABLE_AI)	
    list(APPEND LOCATION_COMPILE_DEFINITIONS ENABLE_AI)
endif(ENABLE_AI)
if(ENABLE_OPENSET_DETECTION)	
    list(APPEND LOCATION_COMPILE_DEFINITIONS ENABLE_OPENSET_DETECTION)
endif(ENABLE_OPENSET_DETECTION)

if(ENABLE_FIRE_DETECTION)	
    list(APPEND LOCATION_COMPILE_DEFINITIONS ENABLE_FIRE_DETECTION)
endif(ENABLE_FIRE_DETECTION)
if(ENABLE_PIO)	
    list(APPEND LOCATION_COMPILE_DEFINITIONS ENABLE_PIO)
endif(ENABLE_PIO)

if(ENABLE_VISION_ENHANCE)
    list(APPEND LOCATION_COMPILE_DEFINITIONS ENABLE_VISION_ENHANCE)
endif(ENABLE_VISION_ENHANCE)


if(ENABLE_STABLIZE)	
    list(APPEND LOCATION_COMPILE_DEFINITIONS ENABLE_STABLIZE)
endif(ENABLE_STABLIZE)

if(ENABLE_ONNXTOENGINE)	
    list(APPEND LOCATION_COMPILE_DEFINITIONS ENABLE_ONNXTOENGINE)
endif(ENABLE_ONNXTOENGINE)

if(ENABLE_AR)	
    list(APPEND LOCATION_COMPILE_DEFINITIONS ENABLE_AR)
endif(ENABLE_AR)

if(ENABLE_AIRBORNE)
    message(STATUS "ENABLE AIRBORNE")
    list(APPEND LOCATION_COMPILE_DEFINITIONS ENABLE_AIRBORNE)
else()
    message(STATUS "NOT ENABLE AIRBORNE")
endif(ENABLE_AIRBORNE)

target_compile_definitions(eap-sma-core
  PUBLIC ${LOCATION_COMPILE_DEFINITIONS})
target_compile_options(eap-sma-core
  PRIVATE ${COMPILE_OPTIONS_DEFAULT})

if(CMAKE_SYSTEM_NAME MATCHES "Linux")
  target_link_libraries(eap-sma-core PUBLIC ${LOCATION_LINK_LIBRARIES})
else()
  target_link_libraries(eap-sma-core PUBLIC ${LOCATION_LINK_LIBRARIES})
  target_link_libraries(eap-sma-core PUBLIC 
  debug ${LINK_LIBRARIES_DEBUG}
  optimized ${LINK_LIBRARIES_RELEASE})
endif()

# 动态库link时，可以直接找到头文件目录
target_include_directories(eap-sma-core
  PRIVATE
    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
  PUBLIC
    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>")

update_cached_list(LINK_LIBRARIES EAPS::CoreLib)

# 未在使用
if(ENABLE_CXX_API)
  # 保留目录结构
  install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/
    DESTINATION ${INSTALL_PATH_INCLUDE}/EDGE
    REGEX ".*[.](md|cpp)$" EXCLUDE)
  install(TARGETS eap-sma-core
    DESTINATION ${INSTALL_PATH_LIB})
endif ()